framec_tests/language_specific/python/v3_systems/positive/child_forwards_then_transition_exec.frm
@target python
# @run-expect: FORWARD:PARENT
# @run-expect: FORWARD:PARENT
# @run-expect: TRANSITION:

system S {
    machine:
        $A => $P {
            e() {
                if True:
                    => $^
                    => $^
                -> $B()
            }
        }
        $B { }
        $P { }
}

