framec_tests/language_specific/python/v3_systems/negative/duplicate_machine_block.frm
@target python

# System with duplicate machine: blocks. Expect E114.
# @expect: E114

system S {
    machine:
        $A {
            e() { x() }
        }
    machine:
        $B {
            e() { x() }
        }
}
